--- a/myProjectApp/src/app/menu/menu.component.html
+++ b/myProjectApp/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <ul class="nav nav-pills">
-        <li><a [routerLink]="['/projects']">Add Project</a></li>
-        <li><a [routerLink]="['/task']">Add Task</a></li>
-        <li><a [routerLink]="['/users']">Add User</a></li>
-        <li><a [routerLink]="['/tasklist']">View Task</a></li>
+    <ul class="nav navbar-light">
+        <li><a class="navbar-brand" [routerLink]="['/projects']">Add Project</a></li>
+        <li><a class="navbar-brand" [routerLink]="['/task']">Add Task</a></li>
+        <li><a class="navbar-brand" [routerLink]="['/users']">Add User</a></li>
+        <li><a class="navbar-brand" [routerLink]="['/tasklist']">View Task</a></li>
     </ul>
   </div>
   </div>
