--- a/myProjectApp/src/app/projects/project/project.component.html
+++ b/myProjectApp/src/app/projects/project/project.component.html
@@ -17,7 +17,8 @@
       <label class="form-text">Start Date</label>
      </div>
     <div class="form-group col-md-4">
-      <input class="form-control" name="StartDate" #StartDate="ngModel" [(ngModel)]="sharedService.selectedProject.StartDate" placeholder="Start Date"
+
+      <input class="form-control" type="date" name="StartDate" #StartDate="ngModel" [(ngModel)]="sharedService.selectedProject.StartDate" placeholder="Start Date"
         required>
       <div class="validation-error" *ngIf="StartDate.invalid && StartDate.touched">Start Date is Required.</div>
     </div>
@@ -25,7 +26,7 @@
         <label class="form-text">End Date</label>
        </div>
     <div class="form-group col-md-4">
-        <input class="form-control" name="EndDate" #EndDate="ngModel" [(ngModel)]="sharedService.selectedProject.EndDate" placeholder="End Date" required>
+        <input class="form-control" type="date" name="EndDate" useValueAsDate #EndDate="ngModel" [(ngModel)]="sharedService.selectedProject.EndDate" placeholder="End Date" required>
         <div class="validation-error" *ngIf="EndDate.invalid && EndDate.touched">End Date  is Required.</div>
       </div>
   </div>
@@ -40,7 +41,7 @@
   </div>
   <div class="row">
     <div class="form-group col-md-2">
-      <button [disabled]="!projectForm.valid" type="submit" class="btn btn-block btn-lg btn-info">
+      <button [disabled]="!projectForm.valid" type="submit" class="btn btn-lg btn-info">
         <i class="fa fa-floppy-o"></i> Submit</button>
     </div>
     <div class="form-group col-md-2">
@@ -50,3 +51,48 @@
   </div>
 </div>
 </form>
+<script>
+  /*
+  app.directive('asDate', function() {
+  return {
+    require: 'ngModel',
+    link: function(scope, element, attrs, modelCtrl) {
+      modelCtrl.$formatters.push(function(input) {
+        var transformedInput;
+        if (input) transformedInput = new Date(input);
+        else transformedInput = new Date();
+        if (transformedInput !== input) {
+          modelCtrl.$setViewValue(transformedInput);
+          modelCtrl.$render();
+        }
+        return transformedInput;
+      });
+     }
+  };
+});
+$scope.dateOptions = { //--> DATE FORMAT
+        changeYear: true,
+        changeMonth: true,
+        yearRange: '2015:2030',
+        dateFormat: 'mm-dd-yyyy'
+  };
+  $(function() {
+
+//for displaying datepicker
+
+$('#ngbDatepicker').datetimepicker({
+    viewMode: 'years',
+    format: 'DD/MM/YYYY',
+});
+
+//for getting input value
+
+$("#ngbDatepicker").on("dp.change", function() {
+
+    $scope.selecteddate = $("#datetimepicker").val();
+    alert("selected date is " + $scope.selecteddate);
+
+});
+
+});*/
+</script>
