--- a/myProjectApp/src/app/projects/projectlist/projectlist.component.html
+++ b/myProjectApp/src/app/projects/projectlist/projectlist.component.html
@@ -1,15 +1,23 @@
-<div class="row padding">
-  <h4> Project Details</h4>
-  <div class="table-responsive table-container">
-      <table class="table">
+<div class="col-md-12">
+<h4>Project Details</h4>
+<input type="text" class="form-control" style="margin-bottom:10px; margin-top:10px ; width:250px;" [(ngModel)]="serachText" placeholder="Project Search">
+<div class="row">
+  <div class="col-md-2">Sort By:</div>
+  <div class="col-md-2"><button (click)="SortData(StartDate)" class="btn btn-info">Start Date</button></div>
+  <div class="col-md-2"><button (click)="SortData(EndDate)" class="btn btn-info">End Date</button></div>
+  <div class="col-md-2"><button (click)="SortData(Priority)" class="btn btn-info">Priority</button></div>
+  <div class="col-md-2"><button (click)="SortData(Status)" class="btn btn-info">Completed</button></div>
+</div>
+
+<table class="table table-responsive table-container" style="margin-right:5px;" >
           <tbody>
-            <tr *ngFor="let project of sharedService.projectList">
+            <tr *ngFor="let project of sharedService.filteredProjects ">
               <td>
                 <div class="container dvlst">
                     <div  class="row">
                        <div class="col-md-10">
-                           <div class="container backgrnd">
-                                 <div class="row">
+                           <div class="container backgrnd gridrow">
+                                 <div class="row" style="height:40px;">
                                      <div class="col-md-4">Project:</div>
                                      <div class="col-md-8">{{project.ProjectName}}</div>
                                  </div>
@@ -33,7 +41,7 @@
                          <div class="row backgrnd">{{project.Priority}}</div>
                        </div>
                        <div class="col-md-1">
-                           <div class="row " > <button (click)="deleteProject(project.ProjectID)" class="btn btn-info actionbtn"> Delete</button></div>
+                           <div class="row " > <button (click)="suspendProject(project)" *ngIf="!project.Suspended" class="btn btn-info actionbtn"> Suspend</button></div>
                            <div class="row" > <button (click)="editProject(project)"  class="btn btn-info actionbtn"> Edit</button></div>
                        </div>
                      </div>
@@ -42,5 +50,7 @@
             </tr>
           </tbody>
         </table>
-  </div>
-</div>
+
+      </div>
+
+
