--- a/myProjectApp/src/app/projects/projects.component.html
+++ b/myProjectApp/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <app-project></app-project>
 </div>
-<div class="row">
+<div class="row" style="width:100%">
     <app-projectlist></app-projectlist>
 </div>
