--- a/myProjectApp/src/app/task/task.component.html
+++ b/myProjectApp/src/app/task/task.component.html
@@ -28,7 +28,7 @@
         <label class="form-text"></label>
     </div>
     <div class="form-group col-md-4">
-        <label class="checkbox-inline"><input type="checkbox" name="isParentTask" (change)="parentchecked($event)">  Parent Task</label>
+        <label class="checkbox-inline"><input type="checkbox" name="isParentTask" [(ngModel)]="isParentTask" (change)="parentchecked($event)">  Parent Task</label>
     </div>
   </div>
   <div *ngIf="!isParentTask">
